# SortedStaticIndexBenchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  downloader.sh  install.sh  plot_recap.tex  plotter.py  run_experiments.sh
include/: index_interface.hpp  util.hpp  wrapper_sdsl.hpp
include/index_ops/: alex.hpp  csstree.hpp  fast.hpp  gammadelta.hpp  lavec.hpp  pgm.hpp  pgmpp.hpp  plex.hpp  rmi.hpp  roaring.hpp  rrrgammadelta.hpp  sdsl_eliasfano.hpp  simdbtree.hpp  staticsearchtree.hpp  std_vector.hpp
indices/: rmi_memory_usage.txt
indices/ALEX/: alex.h
indices/CSS-BTree/: csstree.hpp
indices/FAST/: fast.h  fast_util.h
indices/SIMD-B-Tree/include/: b_tree.h  b_tree_pgm.h  ebs.h  pgm_index.hpp  piecewise_linear_model.hpp  sampled_b_tree.h
indices/SIMD_Btrees/: b_plus_tree.h  b_tree.h
indices/pgm/: pgm_index.h
indices/pgm++/: piecewise_linear_model.h
indices/pgmpp/: pgm_index.h
indices/pgmpp/pgmpp/: pgm_index.h
indices/suffix-array-searching/: readme.org  static-search-tree.hpp
indices/suffix-array-searching/static-search-tree/src/: s_tree.rs  util.rs
output/: buildtime.json  dataset_stats.txt  existing.json  index_sizes.txt  memory_footprint.txt  memory_ratios.txt  missing.json  scan.json  static-search-tree-bm-result.json
output/optimizer_output/: books.json  books64.json  books64small.json  companynet.json  exponential.json  friendster.json  lognormal.json  normal.json  normal800.json  wiki.json
output/plots/: error_dump.txt  memory_ratios.txt
output/plots/tables/: books_200M_uint32.tex  books_50M_uint64.tex  books_800M_uint64.tex  companynet_uint32.tex  exponential_uint32.tex  fb_200M_uint64.tex  friendster_50M_uint32.tex  lognormal_uint32.tex  normal_800M_uint32.tex  normal_uint32.tex  osm_cellids_800M_uint64.tex  scan_books_200M_uint32.tex  scan_companynet_uint32.tex  scan_fb_200M_uint64.tex  scan_wiki_ts_200M_uint32.tex  wiki_ts_200M_uint32.tex  wiki_ts_200M_uint64.tex  zipf_uint32.tex
rmi_source_files/: README.md
rmi_source_files/optimizer_output/: optimizer_alba.json  optimizer_books.json  optimizer_exponential.json  optimizer_fb64.json  optimizer_friendster.json  optimizer_lognormal.json  optimizer_normal.json  optimizer_osm64.json  optimizer_wiki.json  optimizer_wiki64.json
scripts/: download_datasets.sh  elaborate_datasets.cpp  install.sh  plot_dataset_distribution.py  run_experiments.sh  run_rmi.sh  run_rmi_optimizer.sh  zipf_gen.hpp
src/: benchmark_build.cpp  benchmark_lookup.cpp  buildtime.cpp  existing.cpp  memory_footprint.cpp  missing.cpp  scan.cpp
src/build_time/: books.cpp
src/existing/: books.cpp
src/missing/: books.cpp
src/scan_neighbors/: books_10.cpp
